force-app/main/default/objects/copado__User_Persona_Assignment__c/copado__User_Persona_Assignment__c.object-meta.xml
<CustomObject>
    <label>User Persona Assignment</label>
    <nameField>
        <displayFormat>UPA-{000000000}</displayFormat>
        <label>User Persona Assignment Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Persona Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>