force-app/main/default/objects/copado__User_Persona_Assignment__c/fields/copado__End_Schedule_ID__c.field-meta.xml
<CustomField>
    <fullName>copado__End_Schedule_ID__c</fullName>
    <inlineHelpText>This is the Apex Job ID for the scheduled permission revokal</inlineHelpText>
    <label>End Schedule ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>