force-app/main/default/objects/copado__User_Persona_Assignment__c/fields/copado__Persona__c.field-meta.xml
<CustomField>
    <fullName>copado__Persona__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Persona</label>
    <referenceTo>copado__Persona__c</referenceTo>
    <relationshipLabel>User Persona Assignments</relationshipLabel>
    <relationshipName>User_Persona_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>