force-app/main/default/objects/copado__User_Persona_Assignment__c/fields/copado__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>copado__Start_Time__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>