force-app/main/default/objects/copado__User_Persona_Assignment__c/fields/copado__Status_Message__c.field-meta.xml
<CustomField>
    <fullName>copado__Status_Message__c</fullName>
    <label>Status Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>