force-app/main/default/objects/copado__User_Persona_Assignment__c/validationRules/copado__Permanent_no_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>copado__Permanent_no_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>and (
 ISPICKVAL( copado__Type__c ,&quot;Permanent&quot;),
  or (
    not( ISNULL( copado__End_Time__c ) ),
    not( ISNULL( copado__Start_Time__c  ) )
  )
)</errorConditionFormula>
    <errorDisplayField>copado__Type__c</errorDisplayField>
    <errorMessage>Cannot  specify End and Start time for Permanent permissions.</errorMessage>
</ValidationRule>