force-app/main/default/objects/copado__User_Persona_Assignment__c/validationRules/copado__Start_End_date_illogicalness.validationRule-meta.xml
<ValidationRule>
    <fullName>copado__Start_End_date_illogicalness</fullName>
    <active>true</active>
    <description>If current user sets start date less than the end date, then the rule&apos;s error message will appear on the top of the page.</description>
    <errorConditionFormula>IF( copado__Start_Time__c &gt;  copado__End_Time__c ,true, false)</errorConditionFormula>
    <errorMessage>Start Time cannot be after the End Time.</errorMessage>
</ValidationRule>