force-app/main/default/objects/copado__User_Persona_Assignment__c/validationRules/copado__Temporary_with_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>copado__Temporary_with_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>and (
 ISPICKVAL( copado__Type__c ,&quot;Temporary&quot;),
  or (
   ISNULL( copado__End_Time__c ),
   ISNULL( copado__Start_Time__c  )
  )
)</errorConditionFormula>
    <errorDisplayField>copado__Type__c</errorDisplayField>
    <errorMessage>Specify End and Start time for Temporary permissions.</errorMessage>
</ValidationRule>